--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Mrs+Saint+Delafield&family=Tinos&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Mrs+Saint+Delafield&family=Tinos&display=swap&family=Cardo">
     <link rel="stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f5f2f0" />
+    <meta name="theme-color" content="#f1ede1" />
     <meta
       name="description"
       content="Lauren and Benji's Wedding Website"
